<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_dialog_text"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_text" />

    <TextView
        android:id="@+id/tv_dialog_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_log_out_and_clear_all_local_locations"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/bt_dialog_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main"
        android:text="@string/yes"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintDimensionRatio="H,1:1.6"
        app:layout_constraintEnd_toStartOf="@+id/bt_dialog_no"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_text"
        app:layout_constraintHorizontal_bias="0.9" />

    <Button
        android:id="@+id/bt_dialog_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:backgroundTint="@color/main"
        android:layout_marginTop="@dimen/dp_10"
        app:layout_constraintDimensionRatio="H,1:1.6"
        app:layout_constraintEnd_toEndOf="@+id/tv_dialog_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_text" />

</androidx.constraintlayout.widget.ConstraintLayout>